# node-hid-input

./: .gitignore  .npmignore  CMakeLists.txt  README.md  demo.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
addon/: .clang-format  CMakeLists.txt
addon/src/: addon.cc  addon.h  input_linux.cc  input_linux.h  keymap.h  promised_async.h
scripts/: check-prebuild.cjs
src/: binding.ts  index.ts  socket.ts
